--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.chen91apps.echos">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/Mytheme">
+        android:theme="@style/Mytheme"
+        android:networkSecurityConfig="@xml/intenet">
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@xml/intenet" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
