--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,23 @@ android {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
     }
+
+    sourceSets {
+        main {
+            res.srcDirs =
+                    [
+                            'src/main/res/groups/mainactivaty',
+                            'src/main/res/groups/maindrawer',
+                            'src/main/res/groups/listitem',
+                            'src/main/res/groups/tabitem',
+                            'src/main/res/groups/fragments',
+                            'src/main/res/groups/activities',
+                            'src/main/res/groups/preference',
+                            'src/main/res/groups',
+                            'src/main/res'
+                    ]
+        }
+    }
 }
 
 dependencies {
