--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
 }
