--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
 
-    implementation 'com.google.android.exoplayer:exoplayer:2.8.1'
+    implementation 'cn.jzvd:jiaozivideoplayer:6.2.12'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 }
