--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity
             android:name=".ViewActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:parentActivityName=".MainActivity"
+            android:parentActivityName=".SearchResultActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -52,6 +52,7 @@
         </activity>
         <activity
             android:name=".SearchResultActivity"
+            android:launchMode="singleTop"
             android:parentActivityName=".SearchActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
